@@ -1,3 +1,8 @@
+2007-02-05  Naohiro Aota  <nao.aota@gmail.com>
+
+	* w3m.el (w3m-fontify): Don't delete things like tags in forms of
+	type=text as well as of type=textarea.
+
 2007-02-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add
